# wd14-tagger-api-server

./: README.md  pyproject.toml  requirements.txt
wd14_tagger_api/: __main__.py  server.py  wd14_tagger.py
wd14_tagger_api/tagger/: interrogator.py  interrogators.py
